--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ playground.xcworkspace
 /*.gcno
 
 # End of https://www.gitignore.io/api/swift,xcode,macos,objective-c
+
+### Other Files ###
+
+GitHubClone/GitHubClone/Credential.swift
